Bug 471285 - 'Workers: Spec for runtime error behavior has changed'. r+sr=jst, a=blocking1.9+
UltraBlame original commit: 1c68eb288c858e52c028007c6023d202c87e7244

--- a/dom/src/threads/test/test_recursion.html
+++ b/dom/src/threads/test/test_recursion.html
@@ -199,52 +199,12 @@ is
 (
 event
 .
-data
-'
-[
-JavaScript
-Error
-:
+message
 "
 too
 much
 recursion
 "
-{
-file
-:
-"
-http
-:
-/
-/
-localhost
-:
-8888
-'
-+
-'
-/
-tests
-/
-dom
-/
-src
-/
-threads
-/
-test
-/
-recursion_worker
-.
-js
-"
-line
-:
-2
-}
-]
-'
 )
 ;
 SimpleTest
