--- a/dom/src/threads/test/test_scopeOnerror.html
+++ b/dom/src/threads/test/test_scopeOnerror.html
@@ -176,43 +176,9 @@ Components
 results
 ;
 var
-consoleService
-=
-Cc
-[
-"
-mozilla
-.
-org
-/
-consoleservice
-;
-1
-"
-]
-.
-getService
-(
-Ci
-.
-nsIConsoleService
-)
-;
-var
 errors
 =
 [
-"
-This
-exception
-should
-show
-up
-in
-the
-JS
-console
-"
 "
 This
 exception
@@ -224,27 +190,15 @@ onerror
 "
 "
 This
-exception
+error
 should
-too
-"
-"
-This
-exception
-should
-should
-show
-up
-in
-onmessage
+not
+make
+it
+back
+out
 "
 ]
-;
-var
-errorIndex
-=
--
-1
 ;
 var
 worker
@@ -253,7 +207,7 @@ new
 Worker
 (
 "
-errorPropagation_worker1
+scopeOnError_worker
 .
 js
 "
@@ -268,80 +222,21 @@ function
 event
 )
 {
-is
+ok
 (
-event
-.
-target
-worker
-)
-;
-isnot
-(
--
-1
 event
 .
 data
-.
-indexOf
-(
-errors
-[
-errorIndex
-]
-)
-)
-;
-ok
-(
-errorIndex
 =
 =
-errors
-.
-length
--
-1
 "
-Wrong
-number
-of
-errors
-seen
-!
+Done
 "
 )
 ;
-SimpleTest
-.
-finish
+if
 (
-)
-;
-}
-function
-nextError
-(
-)
-{
-worker
-.
-postMessage
-(
-errors
-[
-+
-+
-errorIndex
-]
-)
-;
-}
-function
-errorHandler
-(
-event
+consoleListener
 )
 {
 netscape
@@ -357,39 +252,6 @@ UniversalXPConnect
 '
 )
 ;
-is
-(
-event
-.
-target
-worker
-)
-;
-isnot
-(
--
-1
-event
-.
-message
-.
-indexOf
-(
-errors
-[
-errorIndex
-]
-)
-)
-;
-switch
-(
-errorIndex
-)
-{
-case
-1
-:
 consoleService
 .
 unregisterListener
@@ -407,48 +269,89 @@ consoleListener
 =
 null
 ;
-nextError
+}
+SimpleTest
+.
+finish
 (
-)
-;
-break
-;
-case
-2
-:
-nextError
-(
-)
-;
-break
-;
-default
-:
-ok
-(
-false
-"
-Too
-many
-errors
-!
-"
 )
 ;
 }
+worker
+.
+onerror
+=
+function
+(
+event
+)
+{
+is
+(
+event
+.
+target
+worker
+)
+;
+is
+(
+event
+.
+message
+"
+uncaught
+exception
+:
+This
+exception
+should
+make
+it
+to
+onerror
+"
+)
+;
+event
+.
+preventDefault
+(
+)
+;
 }
+;
 var
 consoleListener
 =
 {
-count
-:
-0
 observe
 :
 function
 (
 message
+)
+{
+ok
+(
+false
+"
+An
+error
+made
+it
+to
+the
+console
+:
+"
++
+message
+)
+;
+if
+(
+consoleListener
 )
 {
 netscape
@@ -464,74 +367,27 @@ UniversalXPConnect
 '
 )
 ;
-if
-(
-this
+consoleService
 .
-count
-+
-+
-)
-{
-ok
+unregisterListener
 (
-false
-"
-Seen
-too
-many
-errors
-!
-"
+consoleListener
 )
 ;
+consoleService
+.
+reset
+(
+)
+;
+consoleListener
+=
+null
+;
+}
 SimpleTest
 .
 finish
-(
-)
-;
-return
-;
-}
-is
-(
-message
-.
-message
-'
-[
-JavaScript
-Error
-:
-"
-uncaught
-exception
-:
-This
-exception
-should
-show
-'
-+
-'
-up
-in
-the
-JS
-console
-"
-]
-'
-)
-;
-worker
-.
-onerror
-=
-errorHandler
-;
-nextError
 (
 )
 ;
@@ -590,6 +446,29 @@ NS_NOINTERFACE
 }
 }
 ;
+var
+consoleService
+=
+Cc
+[
+"
+mozilla
+.
+org
+/
+consoleservice
+;
+1
+"
+]
+.
+getService
+(
+Ci
+.
+nsIConsoleService
+)
+;
 consoleService
 .
 reset
@@ -603,10 +482,25 @@ registerListener
 consoleListener
 )
 ;
-nextError
+for
 (
+var
+index
+in
+errors
+)
+{
+worker
+.
+postMessage
+(
+errors
+[
+index
+]
 )
 ;
+}
 SimpleTest
 .
 waitForExplicitFinish
