--- a/dom/src/threads/test/test_simpleThread.html
+++ b/dom/src/threads/test/test_simpleThread.html
@@ -377,12 +377,7 @@ is
 (
 event
 .
-data
-'
-[
-JavaScript
-Error
-:
+message
 "
 uncaught
 exception
@@ -392,8 +387,6 @@ message
 :
 asdf
 "
-]
-'
 )
 ;
 worker
@@ -417,56 +410,13 @@ is
 (
 otherEvent
 .
-data
-'
-[
-JavaScript
-Error
-:
+message
 "
 Components
 is
 not
 defined
 "
-{
-file
-:
-'
-+
-'
-"
-http
-:
-/
-/
-localhost
-:
-8888
-/
-tests
-/
-dom
-/
-src
-/
-threads
-/
-test
-/
-'
-+
-'
-simpleThread_worker
-.
-js
-"
-line
-:
-6
-}
-]
-'
 )
 ;
 gotErrors
@@ -495,7 +445,7 @@ error
 +
 oneMoreEvent
 .
-data
+message
 )
 ;
 SimpleTest
