Bug 471285 - 'Workers: Spec for runtime error behavior has changed'. r+sr=jst, a=blocking1.9+
UltraBlame original commit: 068d562872dca950fb55b0b46b5e303459a8b3e3

--- a/dom/src/threads/test/test_errorPropagation.html
+++ b/dom/src/threads/test/test_errorPropagation.html
@@ -276,8 +276,10 @@ target
 worker
 )
 ;
-ok
+isnot
 (
+-
+1
 event
 .
 data
@@ -289,15 +291,6 @@ errors
 errorIndex
 ]
 )
-!
-=
--
-1
-"
-Wrong
-message
-!
-"
 )
 ;
 ok
@@ -372,11 +365,13 @@ target
 worker
 )
 ;
-ok
+isnot
 (
+-
+1
 event
 .
-data
+message
 .
 indexOf
 (
@@ -385,15 +380,6 @@ errors
 errorIndex
 ]
 )
-!
-=
--
-1
-"
-Wrong
-message
-!
-"
 )
 ;
 switch
@@ -508,28 +494,35 @@ finish
 return
 ;
 }
-ok
+is
 (
 message
 .
 message
-.
-indexOf
-(
-errors
+'
 [
-errorIndex
+JavaScript
+Error
+:
+"
+uncaught
+exception
+:
+This
+exception
+should
+show
+'
++
+'
+up
+in
+the
+JS
+console
+"
 ]
-)
-!
-=
--
-1
-"
-Wrong
-message
-!
-"
+'
 )
 ;
 worker
