--- a/dom/src/threads/test/test_scopeOnerror.html
+++ b/dom/src/threads/test/test_scopeOnerror.html
@@ -29,7 +29,6 @@ for
 DOM
 Worker
 Threads
-Recursion
 <
 /
 title
@@ -120,37 +119,6 @@ head
 body
 >
 <
-p
-id
-=
-"
-display
-"
->
-<
-/
-p
->
-<
-div
-id
-=
-"
-content
-"
-style
-=
-"
-display
-:
-none
-"
->
-<
-/
-div
->
-<
 pre
 id
 =
@@ -174,18 +142,71 @@ javascript
 "
 >
 var
+errors
+=
+[
+"
+This
+exception
+should
+make
+it
+to
+onerror
+"
+"
+This
+error
+should
+not
+make
+it
+back
+out
+"
+]
+;
+var
 worker
 =
 new
 Worker
 (
 "
-recursion_worker
+scopeOnError_worker
 .
 js
 "
 )
 ;
+worker
+.
+onmessage
+=
+function
+(
+event
+)
+{
+ok
+(
+event
+.
+data
+=
+=
+"
+Done
+"
+)
+;
+SimpleTest
+.
+finish
+(
+)
+;
+}
 worker
 .
 onerror
@@ -199,30 +220,54 @@ is
 (
 event
 .
-message
-"
-too
-much
-recursion
-"
+target
+worker
 )
 ;
-SimpleTest
+is
+(
+event
 .
-finish
+message
+"
+uncaught
+exception
+:
+"
++
+errors
+[
+0
+]
+)
+;
+event
+.
+preventDefault
 (
 )
 ;
 }
+;
+for
+(
+var
+index
+in
+errors
+)
+{
 worker
 .
 postMessage
 (
-"
-start
-"
+errors
+[
+index
+]
 )
 ;
+}
 SimpleTest
 .
 waitForExplicitFinish
