Bug 471165 - Removing the class attribute doesn't clear class name. r=longsonr,sr=roc
UltraBlame original commit: 245acb960a884d220a2c0237a3c38f26796b49fb

--- a/content/svg/content/test/test_valueLeaks.xhtml
+++ b/content/svg/content/test/test_valueLeaks.xhtml
@@ -361,6 +361,19 @@ animVal
 }
 /
 /
+class
+storeSVGPropertyAsExpando
+(
+"
+marker
+"
+"
+class
+"
+)
+;
+/
+/
 angle
 storeSVGPropertyAsExpando
 (
