Bug 471165. Make SVG animated class storage an nsAutoPtr<nsString> and make the DOM 'className' object a tear-off. r=longsonr,sr=roc
UltraBlame original commit: e7e8b8ba64984cf329773a856ee305ecb7ab94a9

--- a/content/svg/content/test/test_valueLeaks.xhtml
+++ b/content/svg/content/test/test_valueLeaks.xhtml
@@ -321,6 +321,16 @@ SVGAnimatedAngle
 propVal
 instanceof
 SVGAnimatedLength
+|
+|
+propVal
+instanceof
+SVGAnimatedRect
+|
+|
+propVal
+instanceof
+SVGAnimatedPreserveAspectRatio
 )
 {
 Object
@@ -361,6 +371,19 @@ animVal
 }
 /
 /
+class
+storeSVGPropertyAsExpando
+(
+"
+marker
+"
+"
+class
+"
+)
+;
+/
+/
 angle
 storeSVGPropertyAsExpando
 (
@@ -369,6 +392,32 @@ marker
 "
 "
 orientAngle
+"
+)
+;
+/
+/
+viewBox
+storeSVGPropertyAsExpando
+(
+"
+marker
+"
+"
+viewBox
+"
+)
+;
+/
+/
+preserveAspectRatio
+storeSVGPropertyAsExpando
+(
+"
+marker
+"
+"
+preserveAspectRatio
 "
 )
 ;
