Bug 472204. Define event handler scripts before the video/audio elements that reference them, to guard against situations where the video element loads before we've parsed the event handlers. r=roc
UltraBlame original commit: f918c5e6ba7ff5d6605e335240e59ee5fd75e7a3

--- a/content/media/video/test/test_bug448534.html
+++ b/content/media/video/test/test_bug448534.html
@@ -166,6 +166,207 @@ Bug
 a
 >
 <
+pre
+id
+=
+"
+test
+"
+>
+<
+script
+class
+=
+"
+testbody
+"
+type
+=
+"
+text
+/
+javascript
+"
+>
+var
+v
+;
+var
+played
+=
+false
+;
+var
+completed
+=
+false
+;
+function
+loaded
+(
+)
+{
+if
+(
+completed
+)
+return
+false
+;
+v
+=
+document
+.
+getElementById
+(
+'
+v
+'
+)
+;
+v
+.
+play
+(
+)
+;
+return
+false
+;
+}
+function
+started
+(
+)
+{
+if
+(
+completed
+)
+return
+false
+;
+ok
+(
+v
+"
+'
+v
+'
+global
+should
+be
+initialized
+"
+)
+;
+ok
+(
+!
+v
+.
+paused
+"
+Video
+should
+not
+be
+paused
+while
+playing
+"
+)
+;
+v
+.
+parentNode
+.
+removeChild
+(
+v
+)
+;
+played
+=
+true
+;
+return
+false
+;
+}
+function
+stopped
+(
+)
+{
+if
+(
+completed
+)
+return
+false
+;
+completed
+=
+true
+;
+ok
+(
+v
+"
+'
+v
+'
+global
+should
+be
+initialized
+"
+)
+;
+ok
+(
+v
+.
+paused
+"
+Video
+should
+be
+paused
+after
+removing
+from
+the
+Document
+"
+)
+;
+SimpleTest
+.
+finish
+(
+)
+;
+return
+false
+;
+}
+SimpleTest
+.
+waitForExplicitFinish
+(
+)
+;
+<
+/
+script
+>
+<
+/
+pre
+>
+<
 !
 -
 -
@@ -238,177 +439,6 @@ stopped
 <
 /
 video
->
-<
-pre
-id
-=
-"
-test
-"
->
-<
-script
-class
-=
-"
-testbody
-"
-type
-=
-"
-text
-/
-javascript
-"
->
-var
-v
-=
-document
-.
-getElementById
-(
-'
-v
-'
-)
-;
-var
-played
-=
-false
-;
-var
-completed
-=
-false
-;
-function
-loaded
-(
-)
-{
-if
-(
-completed
-)
-return
-false
-;
-v
-.
-play
-(
-)
-;
-return
-false
-;
-}
-function
-started
-(
-)
-{
-if
-(
-completed
-)
-return
-false
-;
-ok
-(
-!
-v
-.
-paused
-"
-Video
-should
-not
-be
-paused
-while
-playing
-"
-)
-;
-v
-.
-parentNode
-.
-removeChild
-(
-v
-)
-;
-played
-=
-true
-;
-return
-false
-;
-}
-function
-stopped
-(
-)
-{
-if
-(
-completed
-)
-return
-false
-;
-completed
-=
-true
-;
-ok
-(
-v
-.
-paused
-"
-Video
-should
-be
-paused
-after
-removing
-from
-the
-Document
-"
-)
-;
-SimpleTest
-.
-finish
-(
-)
-;
-return
-false
-;
-}
-SimpleTest
-.
-waitForExplicitFinish
-(
-)
-;
-<
-/
-script
->
-<
-/
-pre
 >
 <
 /
