Bug 469818 - Refactor test_textboxes.* files, r=surkov
UltraBlame original commit: 43c4563d77e4c9c16b5ae9d16e7cc9c8fbe24809

--- a/accessible/tests/mochitest/test_textboxes.html
+++ b/accessible/tests/mochitest/test_textboxes.html
@@ -200,6 +200,39 @@ a11y
 /
 accessible
 /
+nsIAccessible_states
+.
+js
+"
+>
+<
+/
+script
+>
+<
+script
+type
+=
+"
+application
+/
+javascript
+"
+src
+=
+"
+chrome
+:
+/
+/
+mochikit
+/
+content
+/
+a11y
+/
+accessible
+/
 testTextboxes
 .
 js
@@ -331,24 +364,24 @@ value
 /
 /
 description
-role_entry
+ROLE_ENTRY
 /
 /
 role
 (
-state_focusable
+STATE_FOCUSABLE
 )
 /
 /
 state
 (
-ext_state_editable
+EXT_STATE_EDITABLE
 )
 /
 /
 extState
 (
-state_readonly
+STATE_READONLY
 )
 /
 /
@@ -482,24 +515,24 @@ value
 /
 /
 description
-role_entry
+ROLE_ENTRY
 /
 /
 role
 (
-state_focusable
+STATE_FOCUSABLE
 )
 /
 /
 state
 (
-ext_state_editable
+EXT_STATE_EDITABLE
 )
 /
 /
 extState
 (
-state_readonly
+STATE_READONLY
 )
 /
 /
@@ -639,24 +672,24 @@ value
 /
 /
 description
-role_entry
+ROLE_ENTRY
 /
 /
 role
 (
-state_focusable
+STATE_FOCUSABLE
 )
 /
 /
 state
 (
-ext_state_editable
+EXT_STATE_EDITABLE
 )
 /
 /
 extState
 (
-state_readonly
+STATE_READONLY
 )
 /
 /
@@ -789,24 +822,24 @@ value
 /
 /
 description
-role_password_text
+ROLE_PASSWORD_TEXT
 /
 /
 role
 (
-state_focusable
+STATE_FOCUSABLE
 )
 /
 /
 state
 (
-ext_state_editable
+EXT_STATE_EDITABLE
 )
 /
 /
 extState
 (
-state_readonly
+STATE_READONLY
 )
 /
 /
@@ -932,26 +965,26 @@ value
 /
 /
 description
-role_entry
+ROLE_ENTRY
 /
 /
 role
 (
-state_focusable
+STATE_FOCUSABLE
 )
 /
 /
 state
 (
-ext_state_editable
+EXT_STATE_EDITABLE
 |
-ext_state_multi_line
+EXT_STATE_MULTI_LINE
 )
 /
 /
 extState
 (
-state_readonly
+STATE_READONLY
 )
 /
 /
@@ -1083,26 +1116,26 @@ value
 /
 /
 description
-role_entry
+ROLE_ENTRY
 /
 /
 role
 (
-state_focusable
+STATE_FOCUSABLE
 )
 /
 /
 state
 (
-ext_state_editable
+EXT_STATE_EDITABLE
 |
-ext_state_multi_line
+EXT_STATE_MULTI_LINE
 )
 /
 /
 extState
 (
-state_readonly
+STATE_READONLY
 )
 /
 /
@@ -1244,26 +1277,26 @@ value
 /
 /
 description
-role_entry
+ROLE_ENTRY
 /
 /
 role
 (
-state_focusable
+STATE_FOCUSABLE
 )
 /
 /
 state
 (
-ext_state_editable
+EXT_STATE_EDITABLE
 |
-ext_state_multi_line
+EXT_STATE_MULTI_LINE
 )
 /
 /
 extState
 (
-state_readonly
+STATE_READONLY
 )
 /
 /
@@ -1407,14 +1440,14 @@ value
 /
 /
 description
-role_entry
+ROLE_ENTRY
 /
 /
 role
 (
-state_focusable
+STATE_FOCUSABLE
 |
-state_readonly
+STATE_READONLY
 )
 /
 /
@@ -1570,20 +1603,20 @@ value
 /
 /
 description
-role_entry
+ROLE_ENTRY
 /
 /
 role
 (
-state_focusable
+STATE_FOCUSABLE
 |
-state_readonly
+STATE_READONLY
 )
 /
 /
 state
 (
-ext_state_multi_line
+EXT_STATE_MULTI_LINE
 )
 /
 /
