Bug 349176 - [RTL] About Firefox; r=gavin
UltraBlame original commit: 2723c17e550236c20a1677ea59e8d97db35c06d4

--- a/browser/base/content/credits.xhtml
+++ b/browser/base/content/credits.xhtml
@@ -240,6 +240,17 @@ mozilla
 org
 >
 #
+Ehsan
+Akhgari
+<
+ehsan
+.
+akhgari
+gmail
+.
+com
+>
+#
 #
 Alternatively
 the
@@ -544,6 +555,29 @@ dtd
 >
 %
 licenseDTD
+;
+<
+!
+ENTITY
+%
+globalDTD
+SYSTEM
+"
+chrome
+:
+/
+/
+global
+/
+locale
+/
+global
+.
+dtd
+"
+>
+%
+globalDTD
 ;
 ]
 >
@@ -1240,6 +1274,15 @@ class
 "
 title
 "
+dir
+=
+"
+&
+locale
+.
+dir
+;
+"
 >
 &
 brandFullName
@@ -1272,6 +1315,15 @@ class
 =
 "
 links
+"
+dir
+=
+"
+&
+locale
+.
+dir
+;
 "
 >
 &
@@ -3855,11 +3907,27 @@ li
 /
 ul
 >
+<
+div
+dir
+=
+"
+&
+locale
+.
+dir
+;
+"
+>
 &
 credit
 .
 translation
 ;
+<
+/
+div
+>
 <
 /
 div
@@ -3883,6 +3951,15 @@ creditsGroup
 >
 <
 h3
+dir
+=
+"
+&
+locale
+.
+dir
+;
+"
 >
 &
 credit
@@ -4110,6 +4187,15 @@ class
 "
 center
 "
+dir
+=
+"
+&
+locale
+.
+dir
+;
+"
 >
 &
 credit
@@ -4126,6 +4212,15 @@ class
 =
 "
 footnote
+"
+dir
+=
+"
+&
+locale
+.
+dir
+;
 "
 >
 &
