Bug 472383 - 'Workers: JS/C++/JS/C++ recursion not properly guarded'. r+sr=jst, a=blocking1.9.1+
UltraBlame original commit: 8056ab7076d58341448552e65ff1c97afdd3f5a0

--- a/dom/src/threads/test/test_recursion.html
+++ b/dom/src/threads/test/test_recursion.html
@@ -173,6 +173,11 @@ text
 javascript
 "
 >
+const
+testCount
+=
+2
+;
 var
 worker
 =
@@ -185,6 +190,11 @@ recursion_worker
 js
 "
 )
+;
+var
+count
+=
+0
 ;
 worker
 .
@@ -207,6 +217,16 @@ recursion
 "
 )
 ;
+if
+(
++
++
+count
+=
+=
+testCount
+)
+{
 SimpleTest
 .
 finish
@@ -214,6 +234,23 @@ finish
 )
 ;
 }
+}
+for
+(
+var
+i
+=
+0
+;
+i
+<
+testCount
+;
+i
++
++
+)
+{
 worker
 .
 postMessage
@@ -223,6 +260,7 @@ start
 "
 )
 ;
+}
 SimpleTest
 .
 waitForExplicitFinish
