Bug 472585 - 'Workers: 'importScripts()' with no args throws an exception against spec'. r+sr+a=sicking.
UltraBlame original commit: 3c0b74a013d753a8150a565d3a314231cd4ad706

--- a/dom/src/threads/test/test_importScripts.html
+++ b/dom/src/threads/test/test_importScripts.html
@@ -287,7 +287,9 @@ message
 :
 "
 +
-message
+event
+.
+data
 )
 ;
 SimpleTest
@@ -321,7 +323,7 @@ error
 +
 event
 .
-data
+message
 )
 ;
 SimpleTest
