Bug 464848: XMLHttpRequest doesn't send the right content-type for non-document request bodies. r/sr=bz
UltraBlame original commit: 602e6c8d494aff5cc17b845c62abcced9aa80623

--- a/content/base/test/test_CrossSiteXHR.html
+++ b/content/base/test/test_CrossSiteXHR.html
@@ -2114,6 +2114,35 @@ method
 "
 POST
 "
+body
+:
+"
+hi
+there
+"
+noAllowPreflight
+:
+1
+}
+{
+method
+:
+"
+POST
+"
+}
+{
+method
+:
+"
+POST
+"
+body
+:
+"
+hi
+there
+"
 headers
 :
 {
@@ -2139,12 +2168,11 @@ method
 "
 POST
 "
-}
-{
-method
+body
 :
 "
-POST
+hi
+there
 "
 headers
 :
@@ -2167,6 +2195,12 @@ method
 :
 "
 POST
+"
+body
+:
+"
+hi
+there
 "
 headers
 :
@@ -2213,6 +2247,12 @@ method
 "
 POST
 "
+body
+:
+"
+hi
+there
+"
 headers
 :
 {
@@ -2306,6 +2346,12 @@ method
 "
 POST
 "
+body
+:
+"
+hi
+there
+"
 headers
 :
 {
@@ -2378,6 +2424,12 @@ method
 :
 "
 POST
+"
+body
+:
+"
+hi
+there
 "
 headers
 :
@@ -2521,6 +2573,12 @@ method
 "
 POST
 "
+body
+:
+"
+hi
+there
+"
 headers
 :
 {
@@ -2547,6 +2605,12 @@ method
 :
 "
 POST
+"
+body
+:
+"
+hi
+there
 "
 headers
 :
@@ -2883,6 +2947,12 @@ method
 "
 POST
 "
+body
+:
+"
+hi
+there
+"
 headers
 :
 {
@@ -3058,6 +3128,12 @@ method
 "
 POST
 "
+body
+:
+"
+hi
+there
+"
 headers
 :
 {
@@ -3087,6 +3163,12 @@ method
 :
 "
 POST
+"
+body
+:
+"
+hi
+there
 "
 headers
 :
@@ -3175,6 +3257,11 @@ uploadProgress
 test
 .
 uploadProgress
+body
+:
+test
+.
+body
 }
 ;
 if
@@ -3557,8 +3644,39 @@ uploadProgress
 test
 .
 uploadProgress
+body
+:
+test
+.
+body
 }
 ;
+if
+(
+test
+.
+body
+)
+{
+req
+.
+url
++
+=
+"
+&
+body
+=
+"
++
+escape
+(
+test
+.
+body
+)
+;
+}
 if
 (
 test
