Fix mochitest orange
UltraBlame original commit: b93de60dcb8eb3ca6a2dff6b1cd24fce92019832

--- a/content/base/test/test_XHRSendData.html
+++ b/content/base/test/test_XHRSendData.html
@@ -1147,6 +1147,46 @@ null
 )
 ;
 }
+if
+(
+test
+.
+body
+instanceof
+Document
+)
+{
+is
+(
+xhr
+.
+responseText
+.
+replace
+(
+"
+\
+r
+\
+n
+"
+"
+\
+n
+"
+)
+test
+.
+resBody
+"
+Wrong
+body
+"
+)
+;
+}
+else
+{
 is
 (
 xhr
@@ -1161,6 +1201,7 @@ body
 "
 )
 ;
+}
 }
 <
 /
