Bug 473680. Stop crashtest 458637-1.html early (returning success) if it's running too long.
UltraBlame original commit: 9813b594352a5303bcf3023a2b26f87edeeabf97

--- a/content/base/crashtests/458637-1.html
+++ b/content/base/crashtests/458637-1.html
@@ -26,6 +26,14 @@ iterations
 =
 0
 ;
+var
+start
+=
+new
+Date
+(
+)
+;
 function
 boom
 (
@@ -105,13 +113,28 @@ overflow
 "
 "
 ;
+var
+now
+=
+new
+Date
+(
+)
+;
 if
 (
 +
 +
 iterations
 <
-10
+20
+&
+&
+now
+-
+start
+<
+5000
 )
 setTimeout
 (
