Bug 472674 - Allow XPCNativeWrapper to unwrap SJOWs again. r+sr=jst
UltraBlame original commit: 5d3af3ff96391326fea5f07b9eac94ea9216cedd

--- a/js/src/xpconnect/tests/mochitest/test_wrappers.html
+++ b/js/src/xpconnect/tests/mochitest/test_wrappers.html
@@ -414,6 +414,32 @@ window
 )
 =
 =
+new
+XPCNativeWrapper
+(
+window
+)
+'
+SJOWs
+equality
+hook
+returns
+true
+correctly
+against
+XPCNW
+'
+)
+;
+ok
+(
+new
+XPCSafeJSObjectWrapper
+(
+window
+)
+=
+=
 window
 '
 SJOWs
