Bug 474257. Implement SVG 1.1 erratum to make beginElementAt/endElementAt return void. r+sr=roc
UltraBlame original commit: d9bbceb06cdc091fd1d9eee326bd01fcebb3b973

--- a/content/smil/test/test_smilRestart.xhtml
+++ b/content/smil/test/test_smilRestart.xhtml
@@ -244,7 +244,7 @@ to
 begin
 =
 "
-0s
+1s
 "
 dur
 =
@@ -315,7 +315,7 @@ to
 begin
 =
 "
-0s
+1s
 "
 dur
 =
@@ -386,7 +386,7 @@ to
 begin
 =
 "
-0s
+1s
 "
 dur
 =
@@ -468,27 +468,6 @@ Variables
 *
 /
 var
-dur
-=
-4
-.
-0
-;
-/
-/
-this
-must
-match
-the
-"
-dur
-"
-attribute
-on
-animations
-above
-.
-var
 svg
 =
 document
@@ -497,6 +476,42 @@ getElementById
 (
 "
 svg
+"
+)
+;
+var
+always
+=
+document
+.
+getElementById
+(
+"
+always
+"
+)
+;
+var
+whenNotActive
+=
+document
+.
+getElementById
+(
+"
+whenNotActive
+"
+)
+;
+var
+never
+=
+document
+.
+getElementById
+(
+"
+never
 "
 )
 ;
@@ -532,118 +547,27 @@ checkInitialState
 )
 ;
 }
-/
-/
-Attempt
-a
-"
-beginElement
-"
-call
-on
-the
-given
-element
-and
-/
-/
-complain
-if
-we
-don
-'
-t
-get
-the
-expected
-return
-value
-.
-/
-/
-'
-time
-'
-is
-only
-provided
-for
-better
-diagnostic
-output
-.
 function
-tryRestartElem
+restartAll
 (
-id
-time
-expectedRetVal
 )
 {
-var
-elem
-=
-document
-.
-getElementById
-(
-id
-)
-;
-var
-retVal
-=
-elem
+always
 .
 beginElement
 (
 )
 ;
-is
-(
-retVal
-expectedRetVal
-"
-Error
-restarting
-animation
-'
-"
-+
-id
-+
-"
-'
-at
-time
-=
-"
-+
-time
-+
-"
-:
-"
-+
-"
-expected
-return
-value
-of
-"
-+
-expectedRetVal
-+
-"
-but
-got
-"
-+
-retVal
-+
-"
+whenNotActive
 .
-"
+beginElement
+(
+)
+;
+never
+.
+beginElement
+(
 )
 ;
 }
@@ -652,13 +576,70 @@ checkInitialState
 (
 )
 {
+/
+/
+At
+first
+everything
+should
+be
+starting
+at
+1s
+is
+(
+always
+.
+getStartTime
+(
+)
+1
+)
+;
+is
+(
+whenNotActive
+.
+getStartTime
+(
+)
+1
+)
+;
+is
+(
+never
+.
+getStartTime
+(
+)
+1
+)
+;
+/
+/
+Now
+try
+to
+restart
+everything
+early
+should
+be
+allowed
+by
+all
+var
+restartTime
+=
 svg
 .
-setCurrentTime
+getCurrentTime
 (
-0
-.
-0
+)
+;
+restartAll
+(
 )
 ;
 setTimeout
@@ -666,9 +647,11 @@ setTimeout
 '
 doCheckInitialState
 (
-0
-.
-0
+'
++
+restartTime
++
+'
 )
 '
 0
@@ -678,38 +661,77 @@ doCheckInitialState
 function
 doCheckInitialState
 (
-time
+restartTime
 )
 {
-tryRestartElem
+is
 (
-'
 always
-'
-time
-true
+.
+getStartTime
+(
+)
+restartTime
 )
 ;
-tryRestartElem
+is
 (
-'
 whenNotActive
-'
-time
-false
+.
+getStartTime
+(
+)
+restartTime
 )
 ;
-tryRestartElem
+is
+(
+never
+.
+getStartTime
+(
+)
+restartTime
+)
+;
+/
+/
+Now
+skip
+to
+half
+-
+way
+var
+newTime
+=
+restartTime
++
+0
+.
+5
+*
+always
+.
+getSimpleDuration
+(
+)
+;
+svg
+.
+setCurrentTime
+(
+newTime
+)
+;
+setTimeout
 (
 '
-never
-'
-time
-false
-)
-;
 checkHalfwayState
 (
+)
+'
+0
 )
 ;
 }
@@ -718,15 +740,34 @@ checkHalfwayState
 (
 )
 {
+/
+/
+Try
+to
+restart
+half
+-
+way
+through
+-
+-
+only
+'
+always
+'
+should
+succeed
+var
+restartTime
+=
 svg
 .
-setCurrentTime
+getCurrentTime
 (
-0
-.
-5
-*
-dur
+)
+;
+restartAll
+(
 )
 ;
 setTimeout
@@ -734,11 +775,11 @@ setTimeout
 '
 doCheckHalfwayState
 (
-0
-.
-5
-*
-dur
+'
++
+restartTime
++
+'
 )
 '
 0
@@ -748,38 +789,78 @@ dur
 function
 doCheckHalfwayState
 (
-time
+restartTime
 )
 {
-tryRestartElem
+is
 (
-'
 always
-'
-time
-true
+.
+getStartTime
+(
+)
+restartTime
 )
 ;
-tryRestartElem
+isnot
 (
-'
 whenNotActive
-'
-time
-false
+.
+getStartTime
+(
+)
+restartTime
 )
 ;
-tryRestartElem
+isnot
+(
+never
+.
+getStartTime
+(
+)
+restartTime
+)
+;
+/
+/
+Now
+skip
+to
+the
+end
+var
+newTime
+=
+always
+.
+getStartTime
+(
+)
++
+always
+.
+getSimpleDuration
+(
+)
++
+1
+;
+svg
+.
+setCurrentTime
+(
+newTime
+)
+;
+setTimeout
 (
 '
-never
-'
-time
-false
-)
-;
 checkEndingState
 (
+)
+'
+0
 )
 ;
 }
@@ -788,11 +869,40 @@ checkEndingState
 (
 )
 {
+/
+/
+Try
+to
+restart
+after
+all
+animations
+have
+finished
+-
+-
+'
+always
+'
+and
+/
+/
+'
+whenNotActive
+'
+should
+succeed
+var
+restartTime
+=
 svg
 .
-setCurrentTime
+getCurrentTime
 (
-dur
+)
+;
+restartAll
+(
 )
 ;
 setTimeout
@@ -800,7 +910,11 @@ setTimeout
 '
 doCheckEndingState
 (
-dur
+'
++
+restartTime
++
+'
 )
 '
 0
@@ -810,100 +924,37 @@ dur
 function
 doCheckEndingState
 (
-time
+restartTime
 )
 {
-tryRestartElem
+is
 (
-'
 always
-'
-time
-true
-)
-;
-tryRestartElem
-(
-'
-whenNotActive
-'
-time
-true
-)
-;
-tryRestartElem
-(
-'
-never
-'
-time
-false
-)
-;
-checkAfterEndingState
-(
-)
-;
-}
-function
-checkAfterEndingState
-(
-)
-{
-svg
 .
-setCurrentTime
+getStartTime
 (
-dur
-*
-3
+)
+restartTime
 )
 ;
-setTimeout
+is
 (
-'
-doCheckAfterEndingState
-(
-dur
-*
-3
-)
-'
-0
-)
-;
-}
-function
-doCheckAfterEndingState
-(
-time
-)
-{
-tryRestartElem
-(
-'
-always
-'
-time
-true
-)
-;
-tryRestartElem
-(
-'
 whenNotActive
-'
-time
-true
+.
+getStartTime
+(
+)
+restartTime
 )
 ;
-tryRestartElem
+isnot
 (
-'
 never
-'
-time
-false
+.
+getStartTime
+(
+)
+restartTime
 )
 ;
 SimpleTest
