bug 474261 - Test remaining implementations in nsHypertextAccessible::GetRole, r=surkov
UltraBlame original commit: 1e72b268d05eb8cc0633a67390dc53e494c21035

--- a/accessible/tests/mochitest/test_nsHyperTextAcc_roles.html
+++ b/accessible/tests/mochitest/test_nsHyperTextAcc_roles.html
@@ -186,10 +186,177 @@ javascript
 "
 >
 function
+testRole
+(
+aID
+aRole
+)
+{
+var
+acc
+=
+getAccessible
+(
+aID
+)
+;
+if
+(
+!
+acc
+)
+return
+;
+try
+{
+is
+(
+acc
+.
+role
+aRole
+"
+Wrong
+role
+for
+"
++
+aID
++
+"
+!
+"
+)
+;
+}
+catch
+(
+e
+)
+{
+ok
+(
+false
+"
+Error
+getting
+role
+for
+"
++
+aID
++
+"
+!
+"
+)
+;
+}
+}
+function
 doTests
 (
 )
 {
+/
+/
+Test
+html
+:
+form
+.
+testRole
+(
+"
+frm
+"
+ROLE_FORM
+)
+;
+/
+/
+test
+html
+:
+div
+testRole
+(
+"
+sec
+"
+ROLE_SECTION
+)
+;
+/
+/
+Test
+html
+:
+blockquote
+testRole
+(
+"
+quote
+"
+ROLE_SECTION
+)
+;
+/
+/
+Test
+html
+:
+h
+all
+levels
+testRole
+(
+"
+head1
+"
+ROLE_HEADING
+)
+;
+testRole
+(
+"
+head2
+"
+ROLE_HEADING
+)
+;
+testRole
+(
+"
+head3
+"
+ROLE_HEADING
+)
+;
+testRole
+(
+"
+head4
+"
+ROLE_HEADING
+)
+;
+testRole
+(
+"
+head5
+"
+ROLE_HEADING
+)
+;
+testRole
+(
+"
+head6
+"
+ROLE_HEADING
+)
+;
 /
 /
 Test
@@ -228,34 +395,12 @@ breaking
 JAWS
 compatibility
 .
-fileUploadAcc
-=
-getAccessible
+testRole
 (
 "
 data
 "
-)
-;
-if
-(
-fileUploadAcc
-)
-is
-(
-fileUploadAcc
-.
-role
 ROLE_TEXT_CONTAINER
-"
-Wrong
-role
-for
-file
-upload
-textbox
-!
-"
 )
 ;
 /
@@ -276,33 +421,12 @@ not
 get
 broken
 .
-var
-paraAcc
-=
-getAccessible
+testRole
 (
 "
 p
 "
-)
-;
-if
-(
-paraAcc
-)
-is
-(
-paraAcc
-.
-role
 ROLE_PARAGRAPH
-"
-Wrong
-role
-for
-paragraph
-!
-"
 )
 ;
 SimpleTest
@@ -389,6 +513,57 @@ Bug
 a
 >
 <
+a
+target
+=
+"
+_blank
+"
+href
+=
+"
+https
+:
+/
+/
+bugzilla
+.
+mozilla
+.
+org
+/
+show_bug
+.
+cgi
+?
+id
+=
+474261
+"
+title
+=
+"
+Test
+remaining
+implementations
+in
+nsHypertextAccessible
+:
+:
+GetRole
+"
+>
+bug
+474261
+<
+/
+a
+>
+<
+/
+a
+>
+<
 p
 id
 =
@@ -433,6 +608,11 @@ pre
 >
 <
 form
+id
+=
+"
+frm
+"
 action
 =
 "
@@ -504,6 +684,131 @@ comparison
 <
 /
 p
+>
+<
+div
+id
+=
+"
+sec
+"
+>
+A
+normal
+div
+<
+/
+div
+>
+<
+blockquote
+id
+=
+"
+quote
+"
+>
+A
+citation
+<
+/
+blockquote
+>
+<
+h1
+id
+=
+"
+head1
+"
+>
+A
+heading
+level
+1
+<
+/
+h1
+>
+<
+h2
+id
+=
+"
+head2
+"
+>
+A
+heading
+level
+2
+<
+/
+h2
+>
+<
+h3
+id
+=
+"
+head3
+"
+>
+A
+heading
+level
+3
+<
+/
+h3
+>
+<
+h4
+id
+=
+"
+head4
+"
+>
+A
+heading
+level
+4
+<
+/
+h4
+>
+<
+h5
+id
+=
+"
+head5
+"
+>
+A
+heading
+level
+5
+<
+/
+h5
+>
+<
+h6
+id
+=
+"
+head6
+"
+>
+A
+heading
+level
+6
+<
+/
+h6
 >
 <
 /
