bug 474281 - accessible name of html table cells is incorrectly including descendants, r=aaronlev, r=surkov
UltraBlame original commit: f177a1157d4bfd5c8b8f37254582c5be72410c09

--- a/accessible/tests/mochitest/test_role_nsHyperTextAcc.html
+++ b/accessible/tests/mochitest/test_role_nsHyperTextAcc.html
@@ -184,75 +184,40 @@ application
 /
 javascript
 "
->
-function
-testRole
-(
-aID
-aRole
-)
-{
-var
-acc
+src
 =
-getAccessible
-(
-aID
-)
-;
-if
-(
-!
-acc
-)
-return
-;
-try
-{
-is
-(
-acc
+"
+chrome
+:
+/
+/
+mochikit
+/
+content
+/
+a11y
+/
+accessible
+/
+role
 .
-role
-aRole
+js
 "
-Wrong
-role
-for
+>
+<
+/
+script
+>
+<
+script
+type
+=
 "
-+
-aID
-+
+application
+/
+javascript
 "
-!
-"
-)
-;
-}
-catch
-(
-e
-)
-{
-ok
-(
-false
-"
-Error
-getting
-role
-for
-"
-+
-aID
-+
-"
-!
-"
-)
-;
-}
-}
+>
 function
 doTests
 (
