--- a/content/base/test/test_CrossSiteXHR.html
+++ b/content/base/test/test_CrossSiteXHR.html
@@ -220,7 +220,9 @@ var
 origins
 =
 [
-[
+{
+server
+:
 '
 http
 :
@@ -230,8 +232,10 @@ example
 .
 org
 '
-]
-[
+}
+{
+server
+:
 '
 http
 :
@@ -243,6 +247,8 @@ org
 :
 80
 '
+origin
+:
 '
 http
 :
@@ -252,8 +258,10 @@ example
 .
 org
 '
-]
-[
+}
+{
+server
+:
 '
 http
 :
@@ -267,8 +275,10 @@ example
 .
 org
 '
-]
-[
+}
+{
+server
+:
 '
 http
 :
@@ -282,42 +292,10 @@ org
 :
 8000
 '
-]
-/
-/
-[
-'
-https
+}
+{
+server
 :
-/
-/
-example
-.
-com
-:
-443
-'
-]
-/
-/
-[
-'
-https
-:
-/
-/
-sub1
-.
-test1
-.
-example
-.
-com
-:
-443
-'
-]
-[
 '
 http
 :
@@ -334,6 +312,8 @@ org
 :
 8000
 '
+origin
+:
 '
 http
 :
@@ -354,8 +334,10 @@ org
 :
 8000
 '
-]
-[
+}
+{
+server
+:
 '
 http
 :
@@ -370,6 +352,8 @@ example
 .
 org
 '
+origin
+:
 '
 http
 :
@@ -388,8 +372,10 @@ example
 .
 org
 '
-]
-[
+}
+{
+server
+:
 '
 http
 :
@@ -401,6 +387,8 @@ xe4mple
 .
 test
 '
+origin
+:
 '
 http
 :
@@ -415,8 +403,28 @@ cua
 .
 test
 '
-]
-[
+}
+{
+server
+:
+'
+http
+:
+/
+/
+xn
+-
+-
+exmple
+-
+cua
+.
+test
+'
+}
+{
+server
+:
 '
 http
 :
@@ -456,6 +464,8 @@ u03bc
 \
 u03ae
 '
+origin
+:
 '
 http
 :
@@ -471,9 +481,116 @@ xn
 -
 jxalpdlp
 '
-]
+}
+{
+origin
+:
+'
+http
+:
+/
+/
+example
+.
+org
+'
+file
+:
+'
+jar
+:
+http
+:
+/
+/
+example
+.
+org
+/
+tests
+/
+content
+/
+base
+/
+test
+/
+file_CrossSiteXHR_inner
+.
+zip
+!
+/
+file_CrossSiteXHR_inner
+.
+html
+'
+}
+{
+origin
+:
+'
+null
+'
+file
+:
+'
+http
+:
+/
+/
+example
+.
+org
+/
+tests
+/
+content
+/
+base
+/
+test
+/
+file_CrossSiteXHR_inner_data
+.
+sjs
+'
+}
 ]
 ;
+/
+/
+[
+'
+https
+:
+/
+/
+example
+.
+com
+:
+443
+'
+]
+/
+/
+[
+'
+https
+:
+/
+/
+sub1
+.
+test1
+.
+example
+.
+com
+:
+443
+'
+]
 window
 .
 addEventListener
@@ -551,6 +668,23 @@ preflight
 -
 less
 requests
+basePath
+=
+"
+/
+tests
+/
+content
+/
+base
+/
+test
+/
+file_CrossSiteXHR_server
+.
+sjs
+?
+"
 baseURL
 =
 "
@@ -561,53 +695,42 @@ http
 localhost
 :
 8888
-/
-tests
-/
-content
-/
-base
-/
-test
-/
 "
 +
-"
-file_CrossSiteXHR_server
-.
-sjs
-?
-"
+basePath
 ;
 for
 each
 (
-originPair
+originEntry
 in
 origins
 )
 {
 origin
 =
-originPair
-[
-1
-]
+originEntry
+.
+origin
 |
 |
-originPair
-[
-0
-]
+originEntry
+.
+server
 ;
 loader
 .
 src
 =
-originPair
-[
-0
-]
+originEntry
+.
+file
+|
+|
+(
+originEntry
+.
+server
 +
 "
 /
@@ -623,8 +746,19 @@ file_CrossSiteXHR_inner
 .
 html
 "
+)
 ;
 yield
+;
+var
+isNullOrigin
+=
+origin
+=
+=
+"
+null
+"
 ;
 port
 =
@@ -716,6 +850,11 @@ origin
 +
 "
 :
+"
+origin
++
+"
+.
 "
 origin
 +
@@ -884,47 +1023,57 @@ replace
 )
 ]
 ;
-for
-each
+if
 (
-method
-in
-[
-"
-GET
-"
-"
-POST
-"
-]
+isNullOrigin
 )
 {
-var
-headers
+passTests
 =
-method
-=
-=
+[
 "
-POST
+*
 "
-?
-{
 "
-Content
--
-Type
+\
+t
+\
+t
+*
+\
+t
 "
-:
-"
-text
-/
-plain
-"
-}
-:
-null
+]
 ;
+failTests
+=
+failTests
+.
+filter
+(
+function
+(
+v
+)
+{
+return
+v
+!
+=
+origin
+}
+)
+;
+failTests
+.
+push
+(
+"
+null
+"
+)
+;
+}
 for
 each
 (
@@ -962,10 +1111,9 @@ origin
 )
 method
 :
-method
-headers
-:
-headers
+"
+GET
+"
 }
 ;
 loaderWindow
@@ -977,6 +1125,12 @@ req
 toSource
 (
 )
+isNullOrigin
+?
+"
+*
+"
+:
 origin
 )
 ;
@@ -1130,10 +1284,9 @@ allowOrigin
 )
 method
 :
-method
-headers
-:
-headers
+"
+GET
+"
 }
 ;
 loaderWindow
@@ -1145,6 +1298,12 @@ req
 toSource
 (
 )
+isNullOrigin
+?
+"
+*
+"
+:
 origin
 )
 ;
@@ -1274,7 +1433,6 @@ allowOrigin
 ;
 }
 }
-}
 /
 /
 Test
@@ -1323,6 +1481,61 @@ yield
 passTests
 =
 [
+{
+method
+:
+"
+GET
+"
+noAllowPreflight
+:
+1
+}
+{
+method
+:
+"
+GET
+"
+headers
+:
+{
+"
+Content
+-
+Type
+"
+:
+"
+baz
+/
+bin
+"
+"
+Accept
+"
+:
+"
+foo
+/
+bar
+"
+"
+Accept
+-
+Language
+"
+:
+"
+sv
+-
+SE
+"
+}
+noAllowPreflight
+:
+1
+}
 {
 method
 :
@@ -2070,7 +2283,17 @@ header
 method
 :
 "
-GET
+HEAD
+"
+noAllowPreflight
+:
+1
+}
+{
+method
+:
+"
+HEAD
 "
 headers
 :
@@ -2107,6 +2330,9 @@ sv
 SE
 "
 }
+noAllowPreflight
+:
+1
 }
 {
 method
@@ -2935,6 +3161,155 @@ header
 method
 :
 "
+GET
+"
+headers
+:
+{
+"
+myheader
+"
+:
+"
+"
+}
+allowMethods
+:
+"
+myheader
+"
+}
+{
+method
+:
+"
+HEAD
+"
+headers
+:
+{
+"
+x
+-
+my
+-
+header
+"
+:
+"
+myValue
+"
+}
+}
+{
+method
+:
+"
+HEAD
+"
+headers
+:
+{
+"
+x
+-
+my
+-
+header
+"
+:
+"
+myValue
+"
+}
+allowHeaders
+:
+"
+"
+}
+{
+method
+:
+"
+HEAD
+"
+headers
+:
+{
+"
+x
+-
+my
+-
+header
+"
+:
+"
+myValue
+"
+}
+allowHeaders
+:
+"
+y
+-
+my
+-
+header
+"
+}
+{
+method
+:
+"
+HEAD
+"
+headers
+:
+{
+"
+x
+-
+my
+-
+header
+"
+:
+"
+myValue
+"
+}
+allowHeaders
+:
+"
+x
+-
+my
+-
+header
+y
+-
+my
+-
+header
+"
+}
+{
+method
+:
+"
+XXDELETE
+"
+allowHeaders
+:
+"
+XXDELETE
+"
+}
+{
+method
+:
+"
 POST
 "
 noAllowPreflight
@@ -3503,6 +3878,19 @@ toSource
 )
 )
 ;
+if
+(
+test
+.
+method
+!
+=
+=
+"
+HEAD
+"
+)
+{
 is
 (
 res
@@ -3604,6 +3992,89 @@ toSource
 )
 )
 ;
+}
+else
+{
+is
+(
+res
+.
+responseXML
+null
+"
+wrong
+responseXML
+in
+test
+for
+"
++
+test
+.
+toSource
+(
+)
+)
+;
+is
+(
+res
+.
+responseText
+"
+"
+"
+wrong
+responseText
+in
+test
+for
+"
++
+test
+.
+toSource
+(
+)
+)
+;
+is
+(
+res
+.
+events
+.
+join
+(
+"
+"
+)
+"
+opening
+rs1
+sending
+rs1
+loadstart
+rs2
+rs4
+load
+"
+"
+wrong
+responseText
+in
+test
+for
+"
++
+test
+.
+toSource
+(
+)
+)
+;
+}
 }
 for
 each
@@ -4345,6 +4816,1054 @@ test
 .
 allowMethods
 )
+;
+loaderWindow
+.
+postMessage
+(
+req
+.
+toSource
+(
+)
+origin
+)
+;
+res
+=
+eval
+(
+yield
+)
+;
+if
+(
+test
+.
+pass
+)
+{
+is
+(
+res
+.
+didFail
+false
+"
+shouldn
+'
+t
+have
+failed
+in
+test
+for
+"
++
+test
+.
+toSource
+(
+)
+)
+;
+is
+(
+res
+.
+status
+200
+"
+wrong
+status
+in
+test
+for
+"
++
+test
+.
+toSource
+(
+)
+)
+;
+is
+(
+res
+.
+responseXML
+"
+<
+res
+>
+hello
+pass
+<
+/
+res
+>
+"
+"
+wrong
+responseXML
+in
+test
+for
+"
++
+test
+.
+toSource
+(
+)
+)
+;
+is
+(
+res
+.
+responseText
+"
+<
+res
+>
+hello
+pass
+<
+/
+res
+>
+\
+n
+"
+"
+wrong
+responseText
+in
+test
+for
+"
++
+test
+.
+toSource
+(
+)
+)
+;
+is
+(
+res
+.
+events
+.
+join
+(
+"
+"
+)
+"
+opening
+rs1
+sending
+rs1
+loadstart
+rs2
+rs3
+rs4
+load
+"
+"
+wrong
+responseText
+in
+test
+for
+"
++
+test
+.
+toSource
+(
+)
+)
+;
+}
+else
+{
+is
+(
+res
+.
+didFail
+true
+"
+should
+have
+failed
+in
+test
+for
+"
++
+test
+.
+toSource
+(
+)
+)
+;
+is
+(
+res
+.
+status
+0
+"
+wrong
+status
+in
+test
+for
+"
++
+test
+.
+toSource
+(
+)
+)
+;
+is
+(
+res
+.
+responseXML
+null
+"
+wrong
+responseXML
+in
+test
+for
+"
++
+test
+.
+toSource
+(
+)
+)
+;
+is
+(
+res
+.
+responseText
+"
+"
+"
+wrong
+responseText
+in
+test
+for
+"
++
+test
+.
+toSource
+(
+)
+)
+;
+is
+(
+res
+.
+events
+.
+join
+(
+"
+"
+)
+"
+opening
+rs1
+sending
+rs1
+loadstart
+rs2
+rs4
+error
+"
+"
+wrong
+events
+in
+test
+for
+"
++
+test
+.
+toSource
+(
+)
+)
+;
+is
+(
+res
+.
+progressEvents
+0
+"
+wrong
+events
+in
+test
+for
+"
++
+test
+.
+toSource
+(
+)
+)
+;
+}
+}
+/
+/
+Test
+redirects
+is
+(
+loader
+.
+src
+"
+http
+:
+/
+/
+example
+.
+org
+/
+tests
+/
+content
+/
+base
+/
+test
+/
+file_CrossSiteXHR_inner
+.
+html
+"
+)
+;
+is
+(
+origin
+"
+http
+:
+/
+/
+example
+.
+org
+"
+)
+;
+tests
+=
+[
+{
+pass
+:
+1
+method
+:
+"
+GET
+"
+hops
+:
+[
+{
+server
+:
+"
+http
+:
+/
+/
+example
+.
+com
+"
+allowOrigin
+:
+origin
+}
+]
+}
+{
+pass
+:
+1
+method
+:
+"
+GET
+"
+hops
+:
+[
+{
+server
+:
+"
+http
+:
+/
+/
+example
+.
+com
+"
+allowOrigin
+:
+origin
+}
+{
+server
+:
+"
+http
+:
+/
+/
+example
+.
+org
+"
+allowOrigin
+:
+origin
+}
+]
+}
+{
+pass
+:
+0
+method
+:
+"
+GET
+"
+hops
+:
+[
+{
+server
+:
+"
+http
+:
+/
+/
+example
+.
+com
+"
+allowOrigin
+:
+origin
+}
+{
+server
+:
+"
+http
+:
+/
+/
+example
+.
+org
+"
+}
+]
+}
+{
+pass
+:
+1
+method
+:
+"
+GET
+"
+hops
+:
+[
+{
+server
+:
+"
+http
+:
+/
+/
+example
+.
+org
+"
+}
+{
+server
+:
+"
+http
+:
+/
+/
+example
+.
+org
+"
+}
+{
+server
+:
+"
+http
+:
+/
+/
+example
+.
+com
+"
+allowOrigin
+:
+origin
+}
+]
+}
+{
+pass
+:
+0
+method
+:
+"
+GET
+"
+hops
+:
+[
+{
+server
+:
+"
+http
+:
+/
+/
+example
+.
+org
+"
+}
+{
+server
+:
+"
+http
+:
+/
+/
+example
+.
+org
+"
+}
+{
+server
+:
+"
+http
+:
+/
+/
+example
+.
+com
+"
+allowOrigin
+:
+origin
+}
+{
+server
+:
+"
+http
+:
+/
+/
+example
+.
+org
+"
+}
+]
+}
+{
+pass
+:
+1
+method
+:
+"
+GET
+"
+hops
+:
+[
+{
+server
+:
+"
+http
+:
+/
+/
+example
+.
+com
+"
+allowOrigin
+:
+origin
+}
+{
+server
+:
+"
+http
+:
+/
+/
+test2
+.
+example
+.
+org
+:
+8000
+"
+allowOrigin
+:
+origin
+}
+{
+server
+:
+"
+http
+:
+/
+/
+sub2
+.
+xn
+-
+-
+lt
+-
+uia
+.
+example
+.
+org
+"
+allowOrigin
+:
+origin
+}
+{
+server
+:
+"
+http
+:
+/
+/
+sub1
+.
+test1
+.
+example
+.
+org
+"
+allowOrigin
+:
+origin
+}
+]
+}
+{
+pass
+:
+0
+method
+:
+"
+GET
+"
+hops
+:
+[
+{
+server
+:
+"
+http
+:
+/
+/
+example
+.
+com
+"
+allowOrigin
+:
+origin
+}
+{
+server
+:
+"
+http
+:
+/
+/
+test2
+.
+example
+.
+org
+:
+8000
+"
+allowOrigin
+:
+origin
+}
+{
+server
+:
+"
+http
+:
+/
+/
+sub2
+.
+xn
+-
+-
+lt
+-
+uia
+.
+example
+.
+org
+"
+allowOrigin
+:
+"
+x
+"
+}
+{
+server
+:
+"
+http
+:
+/
+/
+sub1
+.
+test1
+.
+example
+.
+org
+"
+allowOrigin
+:
+origin
+}
+]
+}
+{
+pass
+:
+1
+method
+:
+"
+GET
+"
+hops
+:
+[
+{
+server
+:
+"
+http
+:
+/
+/
+example
+.
+com
+"
+allowOrigin
+:
+origin
+}
+{
+server
+:
+"
+http
+:
+/
+/
+test2
+.
+example
+.
+org
+:
+8000
+"
+allowOrigin
+:
+origin
+}
+{
+server
+:
+"
+http
+:
+/
+/
+sub2
+.
+xn
+-
+-
+lt
+-
+uia
+.
+example
+.
+org
+"
+allowOrigin
+:
+"
+*
+"
+}
+{
+server
+:
+"
+http
+:
+/
+/
+sub1
+.
+test1
+.
+example
+.
+org
+"
+allowOrigin
+:
+origin
+}
+]
+}
+{
+pass
+:
+0
+method
+:
+"
+GET
+"
+hops
+:
+[
+{
+server
+:
+"
+http
+:
+/
+/
+example
+.
+com
+"
+allowOrigin
+:
+origin
+}
+{
+server
+:
+"
+http
+:
+/
+/
+test2
+.
+example
+.
+org
+:
+8000
+"
+allowOrigin
+:
+origin
+}
+{
+server
+:
+"
+http
+:
+/
+/
+sub2
+.
+xn
+-
+-
+lt
+-
+uia
+.
+example
+.
+org
+"
+allowOrigin
+:
+"
+*
+"
+}
+{
+server
+:
+"
+http
+:
+/
+/
+sub1
+.
+test1
+.
+example
+.
+org
+"
+}
+]
+}
+]
+;
+for
+each
+(
+test
+in
+tests
+)
+{
+req
+=
+{
+url
+:
+test
+.
+hops
+[
+0
+]
+.
+server
++
+basePath
++
+"
+hop
+=
+1
+&
+hops
+=
+"
++
+escape
+(
+test
+.
+hops
+.
+toSource
+(
+)
+)
+method
+:
+test
+.
+method
+}
 ;
 loaderWindow
 .
