Bug 472383 - 'Workers: JS/C++/JS/C++ recursion not properly guarded'. r+sr=jst, a=blocking1.9.1+
UltraBlame original commit: e65cb8fd2cba846d3bc6d7b8d89b85ffae6c9a84

--- a/dom/src/threads/test/test_throwingOnerror.html
+++ b/dom/src/threads/test/test_throwingOnerror.html
@@ -173,11 +173,6 @@ text
 javascript
 "
 >
-const
-testCount
-=
-2
-;
 var
 worker
 =
@@ -185,11 +180,92 @@ new
 Worker
 (
 "
-recursion_worker
+throwingOnerror_worker
 .
 js
 "
 )
+;
+var
+errors
+=
+[
+"
+foo
+"
+"
+bar
+"
+]
+;
+worker
+.
+onerror
+=
+function
+(
+event
+)
+{
+var
+found
+=
+false
+;
+for
+(
+var
+index
+in
+errors
+)
+{
+if
+(
+event
+.
+message
+=
+"
+uncaught
+exception
+:
+"
++
+errors
+[
+index
+]
+)
+{
+errors
+.
+splice
+(
+index
+1
+)
+;
+found
+=
+true
+;
+break
+;
+}
+}
+is
+(
+found
+true
+"
+Unexpected
+error
+!
+"
+)
+;
+}
 ;
 worker
 .
@@ -202,11 +278,18 @@ event
 {
 is
 (
-event
+errors
 .
-data
+length
+0
 "
-Done
+Didn
+'
+t
+see
+expected
+errors
+!
 "
 )
 ;
@@ -217,28 +300,7 @@ finish
 )
 ;
 }
-worker
-.
-onerror
-=
-function
-(
-event
-)
-{
-is
-(
-event
-.
-message
-"
-too
-much
-recursion
-"
-)
 ;
-}
 for
 (
 var
@@ -248,7 +310,7 @@ i
 ;
 i
 <
-testCount
+2
 ;
 i
 +
@@ -260,7 +322,6 @@ worker
 postMessage
 (
 "
-start
 "
 )
 ;
