Backed out changeset 2063e342b8e1 due to failing docshell tests
UltraBlame original commit: 84d584eb23122c050ef2cc32f33e0c959ab1c010

--- a/content/base/test/test_CrossSiteXHR.html
+++ b/content/base/test/test_CrossSiteXHR.html
@@ -220,9 +220,7 @@ var
 origins
 =
 [
-{
-server
-:
+[
 '
 http
 :
@@ -232,10 +230,8 @@ example
 .
 org
 '
-}
-{
-server
-:
+]
+[
 '
 http
 :
@@ -247,8 +243,6 @@ org
 :
 80
 '
-origin
-:
 '
 http
 :
@@ -258,10 +252,8 @@ example
 .
 org
 '
-}
-{
-server
-:
+]
+[
 '
 http
 :
@@ -275,10 +267,8 @@ example
 .
 org
 '
-}
-{
-server
-:
+]
+[
 '
 http
 :
@@ -292,10 +282,42 @@ org
 :
 8000
 '
-}
-{
-server
+]
+/
+/
+[
+'
+https
 :
+/
+/
+example
+.
+com
+:
+443
+'
+]
+/
+/
+[
+'
+https
+:
+/
+/
+sub1
+.
+test1
+.
+example
+.
+com
+:
+443
+'
+]
+[
 '
 http
 :
@@ -312,8 +334,6 @@ org
 :
 8000
 '
-origin
-:
 '
 http
 :
@@ -334,10 +354,8 @@ org
 :
 8000
 '
-}
-{
-server
-:
+]
+[
 '
 http
 :
@@ -352,8 +370,6 @@ example
 .
 org
 '
-origin
-:
 '
 http
 :
@@ -372,10 +388,8 @@ example
 .
 org
 '
-}
-{
-server
-:
+]
+[
 '
 http
 :
@@ -387,8 +401,6 @@ xe4mple
 .
 test
 '
-origin
-:
 '
 http
 :
@@ -403,28 +415,8 @@ cua
 .
 test
 '
-}
-{
-server
-:
-'
-http
-:
-/
-/
-xn
--
--
-exmple
--
-cua
-.
-test
-'
-}
-{
-server
-:
+]
+[
 '
 http
 :
@@ -464,8 +456,6 @@ u03bc
 \
 u03ae
 '
-origin
-:
 '
 http
 :
@@ -481,116 +471,9 @@ xn
 -
 jxalpdlp
 '
-}
-{
-origin
-:
-'
-http
-:
-/
-/
-example
-.
-org
-'
-file
-:
-'
-jar
-:
-http
-:
-/
-/
-example
-.
-org
-/
-tests
-/
-content
-/
-base
-/
-test
-/
-file_CrossSiteXHR_inner
-.
-zip
-!
-/
-file_CrossSiteXHR_inner
-.
-html
-'
-}
-{
-origin
-:
-'
-null
-'
-file
-:
-'
-http
-:
-/
-/
-example
-.
-org
-/
-tests
-/
-content
-/
-base
-/
-test
-/
-file_CrossSiteXHR_inner_data
-.
-sjs
-'
-}
+]
 ]
 ;
-/
-/
-[
-'
-https
-:
-/
-/
-example
-.
-com
-:
-443
-'
-]
-/
-/
-[
-'
-https
-:
-/
-/
-sub1
-.
-test1
-.
-example
-.
-com
-:
-443
-'
-]
 window
 .
 addEventListener
@@ -668,23 +551,6 @@ preflight
 -
 less
 requests
-basePath
-=
-"
-/
-tests
-/
-content
-/
-base
-/
-test
-/
-file_CrossSiteXHR_server
-.
-sjs
-?
-"
 baseURL
 =
 "
@@ -695,42 +561,53 @@ http
 localhost
 :
 8888
+/
+tests
+/
+content
+/
+base
+/
+test
+/
 "
 +
-basePath
+"
+file_CrossSiteXHR_server
+.
+sjs
+?
+"
 ;
 for
 each
 (
-originEntry
+originPair
 in
 origins
 )
 {
 origin
 =
-originEntry
-.
-origin
+originPair
+[
+1
+]
 |
 |
-originEntry
-.
-server
+originPair
+[
+0
+]
 ;
 loader
 .
 src
 =
-originEntry
-.
-file
-|
-|
-(
-originEntry
-.
-server
+originPair
+[
+0
+]
 +
 "
 /
@@ -746,19 +623,8 @@ file_CrossSiteXHR_inner
 .
 html
 "
-)
 ;
 yield
-;
-var
-isNullOrigin
-=
-origin
-=
-=
-"
-null
-"
 ;
 port
 =
@@ -850,11 +716,6 @@ origin
 +
 "
 :
-"
-origin
-+
-"
-.
 "
 origin
 +
@@ -1023,57 +884,47 @@ replace
 )
 ]
 ;
-if
+for
+each
 (
-isNullOrigin
-)
-{
-passTests
-=
+method
+in
 [
 "
-*
+GET
 "
 "
-\
-t
-\
-t
-*
-\
-t
+POST
 "
 ]
-;
-failTests
-=
-failTests
-.
-filter
-(
-function
-(
-v
 )
 {
-return
-v
-!
+var
+headers
 =
-origin
-}
-)
-;
-failTests
-.
-push
-(
+method
+=
+=
 "
+POST
+"
+?
+{
+"
+Content
+-
+Type
+"
+:
+"
+text
+/
+plain
+"
+}
+:
 null
-"
-)
 ;
-}
 for
 each
 (
@@ -1111,9 +962,10 @@ origin
 )
 method
 :
-"
-GET
-"
+method
+headers
+:
+headers
 }
 ;
 loaderWindow
@@ -1125,12 +977,6 @@ req
 toSource
 (
 )
-isNullOrigin
-?
-"
-*
-"
-:
 origin
 )
 ;
@@ -1284,9 +1130,10 @@ allowOrigin
 )
 method
 :
-"
-GET
-"
+method
+headers
+:
+headers
 }
 ;
 loaderWindow
@@ -1298,12 +1145,6 @@ req
 toSource
 (
 )
-isNullOrigin
-?
-"
-*
-"
-:
 origin
 )
 ;
@@ -1433,6 +1274,7 @@ allowOrigin
 ;
 }
 }
+}
 /
 /
 Test
@@ -1481,61 +1323,6 @@ yield
 passTests
 =
 [
-{
-method
-:
-"
-GET
-"
-noAllowPreflight
-:
-1
-}
-{
-method
-:
-"
-GET
-"
-headers
-:
-{
-"
-Content
--
-Type
-"
-:
-"
-baz
-/
-bin
-"
-"
-Accept
-"
-:
-"
-foo
-/
-bar
-"
-"
-Accept
--
-Language
-"
-:
-"
-sv
--
-SE
-"
-}
-noAllowPreflight
-:
-1
-}
 {
 method
 :
@@ -2283,17 +2070,7 @@ header
 method
 :
 "
-HEAD
-"
-noAllowPreflight
-:
-1
-}
-{
-method
-:
-"
-HEAD
+GET
 "
 headers
 :
@@ -2330,9 +2107,6 @@ sv
 SE
 "
 }
-noAllowPreflight
-:
-1
 }
 {
 method
@@ -3161,155 +2935,6 @@ header
 method
 :
 "
-GET
-"
-headers
-:
-{
-"
-myheader
-"
-:
-"
-"
-}
-allowMethods
-:
-"
-myheader
-"
-}
-{
-method
-:
-"
-HEAD
-"
-headers
-:
-{
-"
-x
--
-my
--
-header
-"
-:
-"
-myValue
-"
-}
-}
-{
-method
-:
-"
-HEAD
-"
-headers
-:
-{
-"
-x
--
-my
--
-header
-"
-:
-"
-myValue
-"
-}
-allowHeaders
-:
-"
-"
-}
-{
-method
-:
-"
-HEAD
-"
-headers
-:
-{
-"
-x
--
-my
--
-header
-"
-:
-"
-myValue
-"
-}
-allowHeaders
-:
-"
-y
--
-my
--
-header
-"
-}
-{
-method
-:
-"
-HEAD
-"
-headers
-:
-{
-"
-x
--
-my
--
-header
-"
-:
-"
-myValue
-"
-}
-allowHeaders
-:
-"
-x
--
-my
--
-header
-y
--
-my
--
-header
-"
-}
-{
-method
-:
-"
-XXDELETE
-"
-allowHeaders
-:
-"
-XXDELETE
-"
-}
-{
-method
-:
-"
 POST
 "
 noAllowPreflight
@@ -3878,19 +3503,6 @@ toSource
 )
 )
 ;
-if
-(
-test
-.
-method
-!
-=
-=
-"
-HEAD
-"
-)
-{
 is
 (
 res
@@ -3992,89 +3604,6 @@ toSource
 )
 )
 ;
-}
-else
-{
-is
-(
-res
-.
-responseXML
-null
-"
-wrong
-responseXML
-in
-test
-for
-"
-+
-test
-.
-toSource
-(
-)
-)
-;
-is
-(
-res
-.
-responseText
-"
-"
-"
-wrong
-responseText
-in
-test
-for
-"
-+
-test
-.
-toSource
-(
-)
-)
-;
-is
-(
-res
-.
-events
-.
-join
-(
-"
-"
-)
-"
-opening
-rs1
-sending
-rs1
-loadstart
-rs2
-rs4
-load
-"
-"
-wrong
-responseText
-in
-test
-for
-"
-+
-test
-.
-toSource
-(
-)
-)
-;
-}
 }
 for
 each
@@ -4816,1054 +4345,6 @@ test
 .
 allowMethods
 )
-;
-loaderWindow
-.
-postMessage
-(
-req
-.
-toSource
-(
-)
-origin
-)
-;
-res
-=
-eval
-(
-yield
-)
-;
-if
-(
-test
-.
-pass
-)
-{
-is
-(
-res
-.
-didFail
-false
-"
-shouldn
-'
-t
-have
-failed
-in
-test
-for
-"
-+
-test
-.
-toSource
-(
-)
-)
-;
-is
-(
-res
-.
-status
-200
-"
-wrong
-status
-in
-test
-for
-"
-+
-test
-.
-toSource
-(
-)
-)
-;
-is
-(
-res
-.
-responseXML
-"
-<
-res
->
-hello
-pass
-<
-/
-res
->
-"
-"
-wrong
-responseXML
-in
-test
-for
-"
-+
-test
-.
-toSource
-(
-)
-)
-;
-is
-(
-res
-.
-responseText
-"
-<
-res
->
-hello
-pass
-<
-/
-res
->
-\
-n
-"
-"
-wrong
-responseText
-in
-test
-for
-"
-+
-test
-.
-toSource
-(
-)
-)
-;
-is
-(
-res
-.
-events
-.
-join
-(
-"
-"
-)
-"
-opening
-rs1
-sending
-rs1
-loadstart
-rs2
-rs3
-rs4
-load
-"
-"
-wrong
-responseText
-in
-test
-for
-"
-+
-test
-.
-toSource
-(
-)
-)
-;
-}
-else
-{
-is
-(
-res
-.
-didFail
-true
-"
-should
-have
-failed
-in
-test
-for
-"
-+
-test
-.
-toSource
-(
-)
-)
-;
-is
-(
-res
-.
-status
-0
-"
-wrong
-status
-in
-test
-for
-"
-+
-test
-.
-toSource
-(
-)
-)
-;
-is
-(
-res
-.
-responseXML
-null
-"
-wrong
-responseXML
-in
-test
-for
-"
-+
-test
-.
-toSource
-(
-)
-)
-;
-is
-(
-res
-.
-responseText
-"
-"
-"
-wrong
-responseText
-in
-test
-for
-"
-+
-test
-.
-toSource
-(
-)
-)
-;
-is
-(
-res
-.
-events
-.
-join
-(
-"
-"
-)
-"
-opening
-rs1
-sending
-rs1
-loadstart
-rs2
-rs4
-error
-"
-"
-wrong
-events
-in
-test
-for
-"
-+
-test
-.
-toSource
-(
-)
-)
-;
-is
-(
-res
-.
-progressEvents
-0
-"
-wrong
-events
-in
-test
-for
-"
-+
-test
-.
-toSource
-(
-)
-)
-;
-}
-}
-/
-/
-Test
-redirects
-is
-(
-loader
-.
-src
-"
-http
-:
-/
-/
-example
-.
-org
-/
-tests
-/
-content
-/
-base
-/
-test
-/
-file_CrossSiteXHR_inner
-.
-html
-"
-)
-;
-is
-(
-origin
-"
-http
-:
-/
-/
-example
-.
-org
-"
-)
-;
-tests
-=
-[
-{
-pass
-:
-1
-method
-:
-"
-GET
-"
-hops
-:
-[
-{
-server
-:
-"
-http
-:
-/
-/
-example
-.
-com
-"
-allowOrigin
-:
-origin
-}
-]
-}
-{
-pass
-:
-1
-method
-:
-"
-GET
-"
-hops
-:
-[
-{
-server
-:
-"
-http
-:
-/
-/
-example
-.
-com
-"
-allowOrigin
-:
-origin
-}
-{
-server
-:
-"
-http
-:
-/
-/
-example
-.
-org
-"
-allowOrigin
-:
-origin
-}
-]
-}
-{
-pass
-:
-0
-method
-:
-"
-GET
-"
-hops
-:
-[
-{
-server
-:
-"
-http
-:
-/
-/
-example
-.
-com
-"
-allowOrigin
-:
-origin
-}
-{
-server
-:
-"
-http
-:
-/
-/
-example
-.
-org
-"
-}
-]
-}
-{
-pass
-:
-1
-method
-:
-"
-GET
-"
-hops
-:
-[
-{
-server
-:
-"
-http
-:
-/
-/
-example
-.
-org
-"
-}
-{
-server
-:
-"
-http
-:
-/
-/
-example
-.
-org
-"
-}
-{
-server
-:
-"
-http
-:
-/
-/
-example
-.
-com
-"
-allowOrigin
-:
-origin
-}
-]
-}
-{
-pass
-:
-0
-method
-:
-"
-GET
-"
-hops
-:
-[
-{
-server
-:
-"
-http
-:
-/
-/
-example
-.
-org
-"
-}
-{
-server
-:
-"
-http
-:
-/
-/
-example
-.
-org
-"
-}
-{
-server
-:
-"
-http
-:
-/
-/
-example
-.
-com
-"
-allowOrigin
-:
-origin
-}
-{
-server
-:
-"
-http
-:
-/
-/
-example
-.
-org
-"
-}
-]
-}
-{
-pass
-:
-1
-method
-:
-"
-GET
-"
-hops
-:
-[
-{
-server
-:
-"
-http
-:
-/
-/
-example
-.
-com
-"
-allowOrigin
-:
-origin
-}
-{
-server
-:
-"
-http
-:
-/
-/
-test2
-.
-example
-.
-org
-:
-8000
-"
-allowOrigin
-:
-origin
-}
-{
-server
-:
-"
-http
-:
-/
-/
-sub2
-.
-xn
--
--
-lt
--
-uia
-.
-example
-.
-org
-"
-allowOrigin
-:
-origin
-}
-{
-server
-:
-"
-http
-:
-/
-/
-sub1
-.
-test1
-.
-example
-.
-org
-"
-allowOrigin
-:
-origin
-}
-]
-}
-{
-pass
-:
-0
-method
-:
-"
-GET
-"
-hops
-:
-[
-{
-server
-:
-"
-http
-:
-/
-/
-example
-.
-com
-"
-allowOrigin
-:
-origin
-}
-{
-server
-:
-"
-http
-:
-/
-/
-test2
-.
-example
-.
-org
-:
-8000
-"
-allowOrigin
-:
-origin
-}
-{
-server
-:
-"
-http
-:
-/
-/
-sub2
-.
-xn
--
--
-lt
--
-uia
-.
-example
-.
-org
-"
-allowOrigin
-:
-"
-x
-"
-}
-{
-server
-:
-"
-http
-:
-/
-/
-sub1
-.
-test1
-.
-example
-.
-org
-"
-allowOrigin
-:
-origin
-}
-]
-}
-{
-pass
-:
-1
-method
-:
-"
-GET
-"
-hops
-:
-[
-{
-server
-:
-"
-http
-:
-/
-/
-example
-.
-com
-"
-allowOrigin
-:
-origin
-}
-{
-server
-:
-"
-http
-:
-/
-/
-test2
-.
-example
-.
-org
-:
-8000
-"
-allowOrigin
-:
-origin
-}
-{
-server
-:
-"
-http
-:
-/
-/
-sub2
-.
-xn
--
--
-lt
--
-uia
-.
-example
-.
-org
-"
-allowOrigin
-:
-"
-*
-"
-}
-{
-server
-:
-"
-http
-:
-/
-/
-sub1
-.
-test1
-.
-example
-.
-org
-"
-allowOrigin
-:
-origin
-}
-]
-}
-{
-pass
-:
-0
-method
-:
-"
-GET
-"
-hops
-:
-[
-{
-server
-:
-"
-http
-:
-/
-/
-example
-.
-com
-"
-allowOrigin
-:
-origin
-}
-{
-server
-:
-"
-http
-:
-/
-/
-test2
-.
-example
-.
-org
-:
-8000
-"
-allowOrigin
-:
-origin
-}
-{
-server
-:
-"
-http
-:
-/
-/
-sub2
-.
-xn
--
--
-lt
--
-uia
-.
-example
-.
-org
-"
-allowOrigin
-:
-"
-*
-"
-}
-{
-server
-:
-"
-http
-:
-/
-/
-sub1
-.
-test1
-.
-example
-.
-org
-"
-}
-]
-}
-]
-;
-for
-each
-(
-test
-in
-tests
-)
-{
-req
-=
-{
-url
-:
-test
-.
-hops
-[
-0
-]
-.
-server
-+
-basePath
-+
-"
-hop
-=
-1
-&
-hops
-=
-"
-+
-escape
-(
-test
-.
-hops
-.
-toSource
-(
-)
-)
-method
-:
-test
-.
-method
-}
 ;
 loaderWindow
 .
