Bug 466410. Ensure that videoWidth and videoHeight are valid when metadataloaded fires on Ogg videos. r=doublec
UltraBlame original commit: e6566d187edd0a16c6a630719f2cc49bb4fe7b73

--- a/content/media/video/test/test_onloadedmetadata.html
+++ b/content/media/video/test/test_onloadedmetadata.html
@@ -357,6 +357,36 @@ events
 "
 )
 ;
+is
+(
+video
+(
+)
+.
+videoWidth
+320
+"
+width
+is
+available
+"
+)
+;
+is
+(
+video
+(
+)
+.
+videoHeight
+240
+"
+height
+is
+available
+"
+)
+;
 video
 (
 )
